--- a/src/main/java/de/konnekting/suite/ConsolePanel.form
+++ b/src/main/java/de/konnekting/suite/ConsolePanel.form
@@ -32,9 +32,9 @@
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="consoleArea">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="Welcome to KONNEKTING Suite ...&#xa;"/>
           </Properties>
         </Component>
       </SubComponents>
