--- a/src/main/java/de/konnekting/suite/uicomponents/groupmonitor/GroupMonitorFrame.form
+++ b/src/main/java/de/konnekting/suite/uicomponents/groupmonitor/GroupMonitorFrame.form
@@ -7,6 +7,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Gruppenmonitor"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
